fix: readability of index block

--- a/theme/ItaliaTheme/Blocks/_tableOfContents.scss
+++ b/theme/ItaliaTheme/Blocks/_tableOfContents.scss
@@ -6,7 +6,7 @@ $space-left: 1rem;
     .item {
       display: flex;
       align-items: center;
-      padding-bottom: 0.8rem;
+      padding-bottom: 0.6rem;
       font-size: 0.9rem;
       list-style: none;
 
@@ -20,13 +20,25 @@ $space-left: 1rem;
         position: relative;
         display: inline-block;
         width: 0.55rem;
+        min-width: 0.55rem;
         height: 0.55rem;
-        border-top: 0.1rem solid $primary;
-        border-right: 0.1rem solid $primary;
-        margin-right: 1rem;
+        min-height: 0.55rem;
+        border: 1px solid $primary;
+        margin-right: 0.6rem;
+        background-color: transparent;
+        border-radius: 50%;
         content: '' !important;
         list-style: none;
-        transform: rotate(45deg);
+      }
+
+      &.header-two {
+        margin-top: 0.5rem;
+        font-size: 1rem;
+        font-weight: 600;
+
+        &::before {
+          background-color: $primary;
+        }
       }
 
       &.header-three {
